# HRBot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Makefile  README.md  STREAMLIT_DEPLOYMENT.md  async_hr_chatbot.py  async_hr_chatbot.py.backup  cache.py  chunking.py  cli.py  config.py  create_domain.py  docker-compose.yml  document_chatbot.py  domain_config.py  embedding.py  hr_chatbot.py  main.py  packages.txt  pyproject.toml  query.py  requirements-dev.txt  requirements.txt  services.py  streamlit_app.py  test_basic.py  validation.py
domains/: financial.yaml  hr.yaml  legal.yaml  technical.yaml
faiss_index_hr/: index.faiss  index.pkl
financial_docs/: README.md
legal_docs/: README.md
tech_docs/: README.md
tests/: __init__.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_integration.py
tests/unit/: __init__.py  test_hr_chatbot.py
